tests/spec/emit/snapshots/select_ufcs_send.snap
---
source: tests/spec/emit/concurrency.rs
description: "input: \nfn main() {\n  let ch = Channel.new<int>()\n  select {\n    Channel.send(ch, 1) => { let _ = 0 },\n    _ => { let _ = 1 },\n  }\n}\n"
---
package main

func main() {
	ch := make(chan int)
	select {
	case ch <- 1:
	default:
	}
}
