tests/spec/emit/snapshots/select_with_default.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> int {
    let ch = Channel.new<int>();
  
    select {
      let Some(val) = ch.receive() => val,
      _ => 0,
    }
  }
---
package main

func test() int {
	ch := make(chan int)
	ch_1 := ch
	for {
		select {
		case val, ok := <-ch_1:
			if ok {
				return val
			}
			ch_1 = nil
			continue
		default:
			return 0
		}
	}
}
