tests/spec/emit/snapshots/selective_partial_empty_interface_arms_do_not_import_prelude.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    if let Partial.Err(_) = aws.Read() {}
  }
---
package main

import "example.com/aws"

func main() {
	aws.Read()
}
