tests/spec/emit/snapshots/selective_partial_err_sentinel_falls_back_to_tagged_match.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  import "go:io"
  
  fn main() {
    match aws.Read() {
      Partial.Err(io.EOF) => panic("empty"),
      _ => {},
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
	"io"
)

func main() {
	ret, ret_1 := aws.Read()
	var result lisette.Partial[[]byte, error]
	if ret_1 != nil {
		if ret == nil {
			result = lisette.MakePartialErr[[]byte, error](ret_1)
		} else {
			result = lisette.MakePartialBoth[[]byte, error](ret, ret_1)
		}
	} else {
		result = lisette.MakePartialOk[[]byte, error](ret)
	}
	if result.Tag == lisette.PartialErr {
		if result.ErrVal == io.EOF {
			panic("empty")
		}
	}
}
