tests/spec/emit/snapshots/selective_partial_literal_payload_falls_back_to_tagged_match.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  import "go:os"
  
  fn write(file: Ref<os.File>) {
    match file.Write(['h', 'i']) {
      Partial.Ok(0) => panic("wrote nothing"),
      _ => {},
    }
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func write(file *os.File) {
	ret, ret_1 := file.Write([]byte{'h', 'i'})
	var result lisette.Partial[int, error]
	if ret_1 != nil {
		result = lisette.MakePartialBoth[int, error](ret, ret_1)
	} else {
		result = lisette.MakePartialOk[int, error](ret)
	}
	if result.Tag == lisette.PartialOk {
		if result.OkVal == 0 {
			panic("wrote nothing")
		}
	}
}
