tests/spec/emit/snapshots/selective_partial_ok_unused_name_does_not_bind_nilable_value.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn main() {
    if let Partial.Ok(entries) = os.ReadDir(".") {
      fmt.Println("ok")
    }
  }
---
package main

import (
	"fmt"
	"os"
)

func main() {
	if _, err := os.ReadDir("."); err == nil {
		fmt.Println("ok")
	}
}
