tests/spec/emit/snapshots/selective_partial_with_empty_arms_keeps_call.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  import "go:os"
  
  fn write(file: Ref<os.File>) {
    if let Partial.Both(_, _) = file.Write(['h', 'i']) {}
  }
---
package main

import "os"

func write(file *os.File) {
	file.Write([]byte{'h', 'i'})
}
