tests/spec/emit/snapshots/selector_callee_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn f0(x: int) -> int { x + 10 }
  fn f1(x: int) -> int { x + 20 }
  struct Handler { f: fn(int) -> int }
  
  fn run() -> Result<int, string> {
    let hs = [Handler { f: f0 }, Handler { f: f1 }]
    let mut i = 0
    let get = || -> Result<int, string> { i = 1; Ok(7) }
    let y = hs[i].f(get()?)
    Ok(y)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func f0(x int) int {
	return x + 10
}

func f1(x int) int {
	return x + 20
}

type Handler struct {
	f func(int) int
}

func run() lisette.Result[int, string] {
	hs := []Handler{{f: f0}, {f: f1}}
	i := 0
	get := func() lisette.Result[int, string] {
		i = 1
		return lisette.MakeResultOk[int, string](7)
	}
	callee_2 := hs[i].f
	check_1 := get()
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	y := callee_2(check_1.OkVal)
	return lisette.MakeResultOk[int, string](y)
}
